fix(Friends): Scrollbar now takes up 100% height

--- a/pages/friends/list/FriendsList.less
+++ b/pages/friends/list/FriendsList.less
@@ -12,7 +12,8 @@
 }
 
 .scrolling {
-  height: calc(100% - 1.4rem);
+  height: 100%;
+  min-height: 100%;
 }
 .loading-container {
   text-align: center;
